--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -97,7 +97,7 @@
         <form>
           <div class="form-group">
             <label for="userType">First Name</label>
-            <select class="form-control" id="userType" aria-describedby="firstNameHelp" placeholder="Enter your First Name">
+            <select class="form-control" id="userType" aria-describedby="firstNameHelp" placeholder="Select an User Type">
               <option value="client">Client</option>
               <option value="worker">Worker</option>
               <option value="manager">Manager</option>
