--- a/src/main/resources/static/worker/myReservations.html
+++ b/src/main/resources/static/worker/myReservations.html
@@ -5,8 +5,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <style>
+        .reservation {
+
+            background-color: LightGray;
+            border: 2px solid black;
+            margin-left: 2%;
+            margin-right: 2%;
+            margin-top: 1%;
+            border-radius: 1%;
+
+        }
+  </style>
 </head>
-<body>
+<body onload="fetchMyReservation()">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a href="../index.html"><img src="../clouddomus3.png" alt="cloudDomusLogo" style="width: 200px; height: 50px; margin-right: 1%"></a>
@@ -38,29 +50,13 @@
 </nav>
 
 
-<div id="demo" class="carousel slide" data-ride="carousel" style="width:100%;">
-    <ol class="carousel-indicators">
-        <li data-target="#demo" data-slide-to="0" class="active"></li>
-        <li data-target="#demo" data-slide-to="1"></li>
-        <li data-target="#demo" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img class="d-block w-100" src="../img_carroussel1.jpg" alt="carousel1">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="../img_carroussel2.jpg" alt="carousel2">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="../img_carroussel3.jpg" alt="carousel3">
-        </div>
+<div class="container">
+    <h2>My Reservation Posts </h2>
+    <hr/>
+    <div id="myReservations">
+
     </div>
-    <a class="carousel-control-prev" href="#demo" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-    </a>
-    <a class="carousel-control-next" href="#demo" role="button" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
-    </a>
+
 </div>
 
 <div class="modal fade" id="addReservationModal">
