--- a/src/main/resources/static/client/client.html
+++ b/src/main/resources/static/client/client.html
@@ -9,35 +9,25 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a href="../index.html"><img src="../clouddomus3.png" alt="cloudDomusLogo" style="width: 200px; height: 50px; margin-right: 1%"></a>
+    <a href="client.html"><img src="../clouddomus3.png" alt="cloudDomusLogo" style="width: 200px; height: 50px; margin-right: 1%"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="client.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../Profile.html">Profile</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Services
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="../domestics.html">Domestics</a>
-                    <a class="dropdown-item" href="#">Hospitality</a>
-                    <a class="dropdown-item" href="#">Others</a>
-                </div>
+            <li class="nav-item">
+                <a class="nav-link" href="services.html">Services</a>
             </li>
         </ul>
-
         <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button type="button" class="btn btn-danger" data-toggle="modal" onclick="logout()" style="margin-left: 1%">Logout</button>
         </form>
-        <button type="button" class="btn btn-danger" data-toggle="modal" onclick="logout()" style="margin-left: 1%">Logout</button>
     </div>
 </nav>
 
