--- a/src/main/resources/static/worker/myReservations.html
+++ b/src/main/resources/static/worker/myReservations.html
@@ -21,14 +21,14 @@
 <body onload="fetchMyReservation()">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a href="../index.html"><img src="../clouddomus3.png" alt="cloudDomusLogo" style="width: 200px; height: 50px; margin-right: 1%"></a>
+    <a href="worker.html"><img src="../clouddomus3.png" alt="cloudDomusLogo" style="width: 200px; height: 50px; margin-right: 1%"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="worker.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../Profile.html">Profile</a>
@@ -42,17 +42,17 @@
         </ul>
 
         <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button type="button" class="btn btn-danger" data-toggle="modal" onclick="logout()" style="margin-left: 1%">Logout</button>
         </form>
-        <button type="button" class="btn btn-danger" data-toggle="modal" onclick="logout()" style="margin-left: 1%">Logout</button>
     </div>
 </nav>
-
 
 <div class="container">
     <h2>My Reservation Posts </h2>
     <hr/>
+    <div id="noReservations">
+        <h4>No Reservation Posts Created!</h4>
+    </div>
     <div id="myReservations">
 
     </div>
