--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,15 +9,12 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a href="index.html"><img src="clouddomus3.png" alt="cloudDomusLogo" style="width: 200px; height: 50px; margin-right: 1%"></a>
+  <a href="index.html"><img src="clouddomus3.png" alt="cloudDomusLogo" style="width: 200px; height: 50px; margin-right: 1%"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <button type="button" class="btn btn-success" data-toggle="modal" data-target="#loginModal" style="margin-left: 1%">Login</button>
