--- a/src/main/resources/static/client/client.html
+++ b/src/main/resources/static/client/client.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a href="client.html"><img src="../clouddomus3.png" alt="cloudDomusLogo" style="width: 200px; height: 50px; margin-right: 1%"></a>
+    <a href="client.html"><img src="../clouddomus3.png" alt="cloudDomusLogo" style="width: 200px; height: 50px; margin-right: 1%"/></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -19,10 +19,13 @@
                 <a class="nav-link" href="client.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../Profile.html">Profile</a>
+                <a class="nav-link" href="Profile.html">Profile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="services.html">Services</a>
+                <a class="nav-link" href="reservations.html">Reservation</a>
+            </li>
+            <li>
+                <a class="nav-link" href="myRequests.html">My Requests</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
