--- a/src/main/resources/static/client/reservations.html
+++ b/src/main/resources/static/client/reservations.html
@@ -5,30 +5,41 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <style>
+        .reservation {
+
+            background-color: LightGray;
+            border: 2px solid black;
+            margin-left: 2%;
+            margin-right: 2%;
+            margin-top: 1%;
+            border-radius: 1%;
+
+        }
+    </style>
 </head>
-<body>
+<body onload="fetchReservation()">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a href="worker.html"><img src="../clouddomus3.png" alt="cloudDomusLogo" style="width: 200px; height: 50px; margin-right: 1%"/></a>
+    <a href="client.html"><img src="../clouddomus3.png" alt="cloudDomusLogo" style="width: 200px; height: 50px; margin-right: 1%"/></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="worker.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="client.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="Profile.html">Profile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="myReservations.html">My Reservation Posts</a>
+                <a class="nav-link" href="reservations.html">Reservation</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="modal" data-target="#addReservationModal" href="#">Add Reservation Post</a>
+            <li>
+                <a class="nav-link" href="myRequests.html">My Requests</a>
             </li>
         </ul>
-
         <form class="form-inline my-2 my-lg-0">
             <button type="button" class="btn btn-danger" data-toggle="modal" onclick="logout()" style="margin-left: 1%">Logout</button>
         </form>
@@ -36,29 +47,16 @@
 </nav>
 
 
-<div id="demo" class="carousel slide" data-ride="carousel" style="width:100%;">
-    <ol class="carousel-indicators">
-        <li data-target="#demo" data-slide-to="0" class="active"></li>
-        <li data-target="#demo" data-slide-to="1"></li>
-        <li data-target="#demo" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img class="d-block w-100" src="../img_carroussel1.jpg" alt="carousel1">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="../img_carroussel2.jpg" alt="carousel2">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="../img_carroussel3.jpg" alt="carousel3">
-        </div>
+<div class="container">
+    <h2>Reservation Posts </h2>
+    <hr/>
+    <div id="noReservations">
+        <h4>No Reservation Posts Created!</h4>
     </div>
-    <a class="carousel-control-prev" href="#demo" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-    </a>
-    <a class="carousel-control-next" href="#demo" role="button" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
-    </a>
+    <div id="reservations">
+
+    </div>
+
 </div>
 
 <div class="modal fade" id="addReservationModal">
@@ -108,7 +106,7 @@
 </div>
 
 <!--Scripts-->
-<script src="../js/worker.js"></script>
+<script src="../js/client.js"></script>
 <script src="../js/main.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
