--- a/src/main/resources/static/worker/Profile.html
+++ b/src/main/resources/static/worker/Profile.html
@@ -6,148 +6,84 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
-<body>
+<body onload="loadProfile()">
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a href="index.html"><img src="clouddomus3.png" alt="cloudDomusLogo" style="width: 200px; height: 50px; margin-right: 1%"></a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a href="worker.html"><img src="../clouddomus3.png" alt="cloudDomusLogo" style="width: 200px; height: 50px; margin-right: 1%"/></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Profile.html">Profile</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Services
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="domestics.html">Domestics</a>
-            <a class="dropdown-item" href="#">Hospitality</a>
-            <a class="dropdown-item" href="#">Others</a>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-      <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal" style="margin-left: 1%">Login</button>
-      <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal2" style="margin-left: 1%">Register</button>
-    </div>
-  </nav>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="worker.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Profile.html">Profile</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="myReservations.html">My Reservation Posts</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="modal" data-target="#addReservationModal" href="#">Add Reservation Post</a>
+            </li>
+        </ul>
 
-  <!-- The Modal -->
-  <div class="modal fade" id="myModal">
+        <form class="form-inline my-2 my-lg-0">
+            <button type="button" class="btn btn-danger" data-toggle="modal" onclick="logout()" style="margin-left: 1%">Logout</button>
+        </form>
+    </div>
+</nav> 
+
+ <div class="modal fade" id="addReservationModal">
     <div class="modal-dialog">
-      <div class="modal-content">
+        <div class="modal-content">
 
-        <!-- Modal Header -->
-        <div class="modal-header">
-          <h4 class="modal-title">Login</h4>
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-        </div>
-
-        <!-- Modal body -->
-        <div class="modal-body">
-          <form>
-            <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">Register</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-            </div>
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-            <button type="submit" class="btn btn-primary" style="margin-top: 2%">Submit</button>
-          </form>
-        </div>
 
-        <!-- Modal footer -->
-        <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-        </div>
+            <!-- Modal body -->
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="services">Reservation Services</label>
+                        <select multiple class="form-control" id="services" placeholder="Select Reservation Services"></select>
+                    </div>
+                    <div class="form-group">
+                        <label for="description">Description</label>
+                        <input type="text" class="form-control" id="description" placeholder="Enter a description for your reservation post">
+                    </div>
+                    <div class="form-group">
+                        <label for="startHour">Start Hour</label>
+                        <input type="time" class="form-control" id="startHour">
+                    </div>
+                    <div class="form-group">
+                        <label for="endHour">End Hour</label>
+                        <input type="time" class="form-control" id="endHour">
+                    </div>
+                    <div class="form-group">
+                        <label for="hourPrice">Price per Hour</label>
+                        <input type="number" step="0.01" class="form-control" id="hourPrice" >
+                    </div>
+                    <button type="button" class="btn btn-primary" style="margin-top: 2%" onclick="validateReservationForm()">Submit</button>
+                </form>
+            </div>
 
-      </div>
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            </div>
+
+        </div>
     </div>
-  </div>
-
-  <div class="modal fade" id="myModal2">
-    <div class="modal-dialog">
-      <div class="modal-content">
-
-        <!-- Modal Header -->
-        <div class="modal-header">
-          <h4 class="modal-title">Register</h4>
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-        </div>
-
-        <!-- Modal body -->
-        <div class="modal-body">
-          <form>
-            <div class="form-group">
-              <div class="row">
-                <div class="col-md-6 col-sm-6">
-                  <label for="InputFirst">First Name</label>
-                  <input type="first_name" class="form-control" id="InputFirstName" aria-describedby="firstNameHelp" placeholder="Enter your First Name">
-                </div>
-                <div class="col-md-6 col-sm-6">
-                  <label for="InputLast">Last Name</label>
-                  <input type="last_name" class="form-control" id="InputLastName" aria-describedby="lastNameHelp" placeholder="Enter your Last Name">
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="InputEmail1">Email address</label>
-              <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Enter email">
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-            </div>
-            <div class="form-group">
-              <label for="InputPhone">Phone number</label>
-              <input type="phone" class="form-control" id="InputPhone" aria-describedby="phoneHelp" placeholder="Enter your Phone Number">
-              <small id="phoneHelp" class="form-text text-muted">Required for people to contact with you</small>
-            </div>
-            <div class="form-group">
-              <label for="InputBirthday">Birthday</label>
-              <input type="date" class="form-control" id="InputBirthday">
-            </div>
-            <div class="form-group">
-              <label for="InputPassword1">Password</label>
-              <input type="password" class="form-control" id="InputPassword" placeholder="Password">
-            </div>
-            <div class="form-group">
-              <label for="InputPasswordConfirm1">Confirm Password</label>
-              <input type="password_confirm" class="form-control" id="InputPasswordConfirm" placeholder="PasswordConfirm">
-            </div>
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="Check1">Check me out</label>
-            </div>
-            <button type="submit" class="btn btn-primary" style="margin-top: 2%">Submit</button>
-          </form>
-        </div>
-
-        <!-- Modal footer -->
-        <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-        </div>
-
-      </div>
-    </div>
-  </div>
-
-    <div class="container">
+</div>
+      <div class="container">
         <div class="row">
             <div class="col-md-3 col-sm-3 col-xs-3">
-                <img class="mt-3" src="black.jpg" alt="person_image" style="width:100%; border-radius:10%">
+                <img class="mt-3" src="../black.jpg" alt="person_image" style="width:100%; border-radius:10%">
             </div>
             <div class="col-md-1 col-sm-1 col-xs-1"></div>
             <div class="col-md-8 col-sm-8 col-xs-8 mt-4">
@@ -158,7 +94,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" style="width:125px">First Name:</span>
                                 </div>
-                                <input type="text" class="form-control input-number" name="first_name" value="João" style="text-align:center" disabled>
+                                <input type="text" class="form-control input-number" id="first_name" style="text-align:center" disabled>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-6">
@@ -166,7 +102,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" style="width:125px">Last Name:</span>
                                 </div>
-                                <input type="text" class="form-control input-number" name="last_name" value="Gonçalo" style="text-align:center" disabled>
+                                <input type="text" class="form-control input-number" id="last_name" style="text-align:center" disabled>
                             </div>
                         </div>
                     </div>
@@ -177,15 +113,15 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" style="width:125px">Email:</span>
                                 </div>
-                                <input type="email" class="form-control input-number" id="email" name="email" value="joao@tqs.com" style="text-align:center" disabled>
+                                <input type="email" class="form-control input-number" id="email" name="email" style="text-align:center" disabled>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-6">
                             <div class="input-group">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text" style="width:125px">Birthday</span>
+                                    <span class="input-group-text" style="width:125px">Phone:</span>
                                 </div>
-                                <input type="date" class="form-control input-number" name="birthday" value="1975-05-05" style="text-align:center" disabled>
+                                <input type="text" class="form-control input-number" id="phone" maxlength="9" name="phone" style="text-align:center" disabled>
                             </div>
                         </div>
                     </div>
@@ -194,29 +130,21 @@
                         <div class="col-md-6 col-sm-6 col-xs-6">
                             <div class="input-group">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text" style="width:125px">Phone:</span>
+                                    <span class="input-group-text" style="width:125px">Address:</span>
                                 </div>
-                                <input type="text" class="form-control input-number" maxlength="9" name="phone" value="911111111" style="text-align:center" disabled>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-6 col-xs-6">
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text" style="width:125px">NIF:</span>
-                                </div>
-                                <input type="text" class="form-control" value="111111111" style="text-align:center" disabled>
+                                <input type="text" class="form-control" id="address" style="text-align:center" disabled>
                             </div>
                         </div>
                     </div>
                     
-                    <button type="submit" class="btn btn-dark mb-2" id="SaveButton" style="display: none">Save</button>
                 </form>
-                <button class="btn btn-dark" id="EditButton">Edit</button>
             </div>
         </div>
     </div>
     
   <!--Scripts-->
+  <script src="../js/worker.js"></script>
+  <script src="../js/main.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
