--- a/src/main/resources/static/worker/myReservations.html
+++ b/src/main/resources/static/worker/myReservations.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="worker.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../Profile.html">Profile</a>
+                <a class="nav-link" href="Profile.html">Profile</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="myReservations.html">My Reservation Posts</a>
